--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -64,3 +64,21 @@
         max-width: 720px;
     }
 }
+
+@media screen and (max-width: 600px){
+    .intro{
+        max-width: 288px;
+        min-height: 886px;
+        margin-top: 64px;
+    }
+    
+    .intro__title{
+        max-width: 100%;
+        font-size: 32px;
+        line-height: 35px;
+    }
+    
+    .intro__quote{
+        line-height: 30px;
+    }
+}
