--- a/blocks/page.css
+++ b/blocks/page.css
@@ -17,7 +17,7 @@ html { font-family: 'Inter', sans-serif; }
     background: #2a2c2f;
 }
 
-@media screen and (max-width: 960px) {
+/*@media screen and (max-width: 960px) {
   .page{
     max-width: 768px;
   }
@@ -27,4 +27,4 @@ html { font-family: 'Inter', sans-serif; }
   .page{
     max-width: 320px;
   }
-}
+}*/
