--- a/blocks/places.css
+++ b/blocks/places.css
@@ -10,7 +10,7 @@
 @media screen and (max-width: 960px) {
     .places{
         max-width: 768px;
-        padding-top: 88;
+        padding-top: 88px;
     }
 
     .places__wrapper{
@@ -20,5 +20,20 @@
         display: flex;
         flex-direction: column;
         gap: 72px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .places{
+        max-width: 320px;
+        padding-top: 62px;
+    }
+
+    .places__wrapper{
+        overflow: hidden;
+        max-width: 100%;
+        margin: 0 auto;
+        gap: 63px;
+        padding: 0 16px;
     }
 }
